--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = []
+
+[project.scripts]
+thera = "thera.__main__:main"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+packages = ["thera"]
