--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,10 @@ name = "thera"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.10, <3.14"
 dependencies = [
+    "graphrag",
+    "llvmlite>=0.44,<0.45",
     "openai>=2.7.1",
 ]
 
