--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,9 @@ ENV/
 env.bak/
 venv.bak/
 
+# asdf / asdf .tool-versions (local toolchains)
+.tool-versions
+
 # Spyder project settings
 .spyderproject
 .spyproject
