--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,18 @@
+[build-system]
+requires = ["hatchling"]  # uv 推荐使用 hatchling
+build-backend = "hatchling.build"
+
 [project]
 name = "thera"
-version = "0.1.0"
+version = "0.1.0-alpha.1"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10, <3.14"
 dependencies = [
-    "graphrag",
+    "graphiti-core>=0.23.1",
     "llvmlite>=0.44,<0.45",
     "openai>=2.7.1",
+    "pydantic-settings>=2.12.0",
 ]
 
 [project.scripts]
@@ -17,13 +22,9 @@ thera = "thera.__main__:main"
 test = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
+    "pytest-asyncio>=1.3.0",
 ]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
 packages = ["thera"]
-
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = ["test_*.py"]
-addopts = "-v --cov=thera --cov-report=term-missing"
