--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.10, <3.14"
 dependencies = [
     "graphiti-core>=0.23.1",
     "llvmlite>=0.44,<0.45",
+    "neo4j-graphrag>=1.7.0",
     "openai>=2.7.1",
     "pydantic-settings>=2.12.0",
 ]
