--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "neo4j-graphrag>=1.7.0",
     "openai>=2.7.1",
     "pydantic-settings>=2.12.0",
+    "textual>=6.11.0",
 ]
 
 [project.scripts]
