--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,13 @@ readme = "README.md"
 requires-python = ">=3.10, <3.14"
 dependencies = [
     "graphiti-core>=0.23.1",
+    "lark-oapi>=1.5.3",
     "llvmlite>=0.44,<0.45",
     "neo4j-graphrag>=1.7.0",
     "openai>=2.7.1",
     "pydantic-settings>=2.12.0",
+    "python-dotenv>=1.2.1",
+    "pyyaml>=6.0.3",
     "textual>=6.11.0",
 ]
 
