--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
+    "scikit-learn>=1.0.0",
     "textual>=6.11.0",
 ]
 
